--- a/api/package.json
+++ b/api/package.json
@@ -11,11 +11,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv-safe": "^8.2.0",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "passport": "^0.6.0",
+    "passport-github": "^1.1.0",
+    "pg": "^8.9.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.11"
   },
   "devDependencies": {
     "@types/express": "^4.17.16",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.18",
+    "@types/passport": "^1.0.11",
+    "@types/passport-github": "^1.1.7",
     "nodemon": "^2.0.20",
     "typescript": "^4.9.4"
   }
