--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "passport": "^0.6.0",
     "passport-github": "^1.1.0",
     "pg": "^8.9.0",
+    "polka": "^0.5.2",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.11"
   },
