--- a/extension/package.json
+++ b/extension/package.json
@@ -14,6 +14,7 @@
     "onCommand:vstodo.askQuestion",
     "onCommand:vstodo.refresh",
     "onCommand:vstodo.addTodo",
+    "onCommand:vstodo.authenticate",
     "onView:vstodo-sidebar"
   ],
   "main": "./dist/extension.js",
@@ -58,6 +59,11 @@
         "command": "vstodo.addTodo",
         "category": "VSTodo",
         "title": "Add Todo From Selection"
+      },
+      {
+        "command": "vstodo.authenticate",
+        "category": "VSTodo",
+        "title": "GitHub authentication"
       }
     ]
   },
@@ -80,6 +86,7 @@
     "@types/glob": "^8.0.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
+    "@types/polka": "^0.5.4",
     "@types/vscode": "^1.74.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
@@ -98,5 +105,8 @@
     "typescript": "^4.9.3",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0"
+  },
+  "dependencies": {
+    "polka": "^0.5.2"
   }
 }
