--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv-safe": "^8.2.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
@@ -22,6 +23,7 @@
     "typeorm": "^0.3.11"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.16",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.18",
